# TaskOrbit

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_DOCKER.md  SETUP_GUIDE.md  db_init_example.sql  docker-compose.example.yml  init_task_orbit.example.sh  main.py  next.config.mjs  package.json  pyproject.toml  tailwind.config.ts  todo.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml  deploy.yml
app/: __init__.py  app.py  config.py  default_db_config.yaml  default_sqlite.db  exceptions.py  models.py  routes.py  schemas.py
app/databases/: config.py  database.py
app/db_utils/: config.py  crud.py  database.py  models.py
app/static/js/: auth.js
app/templates/: index.html  login.html
app/templates/partials/: register_popup.html  tabs.html  task.html  task_edit.html  task_list.html  task_popup.html
app/utils/: __init__.py  exceptions.py  logger.py  security.py
app/utils/db/: __init__.py  config.py  crud.py  database.py  default_db_config.yaml  models.py  seed.py
development/: __init__.py  query.py  seed.py  smoke_test.sh
portfolio-website/: package-lock.json  package.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/blog/: page.tsx
src/app/blog/[slug]/: page.tsx
src/app/contact/: page.tsx
src/app/projects/: page.tsx
src/components/: Footer.tsx  Header.tsx  Layout.tsx
src/components/ui/: BlogCard.tsx  ProjectCard.tsx
src/types/: index.ts
tests/: conftest.py  test_auth.py  test_dummy.py  test_flows.py  test_routes.py
tests/db/: conftest.py  test_config.py  test_crud.py  test_models.py
tests/integration/: test_auth.py  test_tasks.py
tests/unit/: test_database_schema.py  test_schemas.py  test_security.py
