[tool.poetry]
name = "taskorbit"
version = "0.1.0"
description = "A task management application"
authors = ["dezeat"] 
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
requests = "^2.32.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
